# axum-sql-viewer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
axum-sql-viewer/: Cargo.toml  build.rs
axum-sql-viewer/frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
axum-sql-viewer/frontend/src/: App.tsx
axum-sql-viewer/frontend/src/components/: QueryEditor.tsx  QueryHistory.tsx  QueryResults.tsx  SavedQueries.tsx  StatusBar.tsx  TableList.tsx  TableViewer.tsx  ThemeToggle.tsx  VirtualizedTable.tsx
axum-sql-viewer/frontend/src/components/ui/: Switch.tsx
axum-sql-viewer/frontend/src/services/: ApiService.ts  QueryHistoryService.ts  SavedQueriesService.ts
axum-sql-viewer/frontend/src/types/: database.ts
axum-sql-viewer/src/: frontend.rs  layer.rs  lib.rs  schema.rs
axum-sql-viewer/src/api/: mod.rs  query.rs  rows.rs  tables.rs
axum-sql-viewer/src/database/: mod.rs  postgres.rs  sqlite.rs  traits.rs
example-server/: Cargo.toml
example-server/src/: database.rs  main.rs
