[package]
name = "example-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["firstdorsal"]
repository = "https://github.com/firstdorsal/axum-sql-viewer"
homepage = "https://github.com/firstdorsal/axum-sql-viewer"
description = "Example Axum server demonstrating axum-sql-viewer integration"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utilities
thiserror = "2"
async-trait = "0.1"

# Local dependency
axum-sql-viewer = { path = "../axum-sql-viewer" }
